- Bug Fix (494): Remove test for frame directory count when using GPS-time folders
- Bug Fix (888): Make mx pre-thread inputs non-volatile
- Added sequential startup of ADC modules when sync source = 1PPS.  This had been done in branch
  2.9, but not conveyed into the trunk. This change primarily affects AEI.
==================================================================================================
Changes for 2.9.7 release
==================================================================================================
- Bug fix: Modified the DAC timing diagnostic code:
        - DAC error bit in STATEWORD will now latch.
        - 18 bit DAC timing fault now requires two consecutive errors detected before performing
          a DAC kill.
==================================================================================================
Changes for 2.9.5 release
==================================================================================================
- Bug fix for True RMS part as per and tested by M. Evans.
==================================================================================================
Changes for 2.9.4 release
==================================================================================================
- Changes to account for June 30, 2015 leap second.
   - Modified timing.c and spectracom.c files to add leap second. This code should be redone in
        next major release as it is not well done here.
   - Dataviewer fixed by adding to leap second list in src/dv/Lib/UTC_GPS/leapsecs.txt
   - gds/tconv.c modified.
==================================================================================================
Changes for 2.9.3 release
==================================================================================================
- Bug Fix (850) : SDF changes.
- As requested for Guardian, changed skeleton.st to read filter module ramp time values before
  offsets and gains.